--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 *.exe
+.idea/.name
+.idea/LuckOfTheDraw.iml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/scopes/scope_settings.xml
+.idea/vcs.xml
+.idea/workspace.xml
